--- a/src/scss/config/variables.scss
+++ b/src/scss/config/variables.scss
@@ -1,10 +1,8 @@
 :root {
-  /* Variables CSS */
-  /* escribir aquí */
-  --primary-color: red;
+  --bg-color-light: #fafafa;
+  --white-color: #ffffff;
+  --grey-color: #9495a5;
+  --light-grey: #e3e4f1;
+  --dark-blue: #393a4b;
+  --active-color: #3a7cfd;
 }
-
-/* Variables SASS */
-/* no usar estas */
-
-$primaryColor: red;
