--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -4,6 +4,7 @@
 @use 'blocks/body.scss';
 @use 'blocks/header.scss';
 @use 'blocks/main.scss';
-@use 'blocks/form.scss';
+@use 'blocks/filters.scss';
+@use 'blocks/tasks.scss';
 @use 'blocks/titles.scss';
 @use 'blocks/texts.scss';
